--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ h1{
     color: rgb(0, 0, 109);
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
+    box-shadow: 15px 10px 5px black;
+    background-color: rgba(180, 250, 110, 0.685);
+}
+h1:active {
+    color: red;
 }
 .listas{
     font-family: Arial, Helvetica, sans-serif;
@@ -11,12 +16,14 @@ h1{
     margin-right: auto;
 }
 .contenedor{
-    width: 1200px;
-    height: 900px;
+    width: 70%;
+    height: 100%;
+    border-radius: 30px 30px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(184, 250, 118, 0.685);
     text-align: center;
+    padding: 20px;
 }
 .clicki:hover{
     color: yellow;
